syntax = "proto3";

package Calculator;

message SumRequest {
	int32 a = 1;
	int32 b = 2;
}

message SumResponse {
	int32 result = 1;
}

message ComputeAverageRequest {
	int32 value = 1;
}

message ComputeAverageResponse {
	double result = 1;
}

message FindMaxRequest {
	int32 value = 1;
}

message FindMaxResponse {
	int32 max = 1;
}

service CalculatorService {
	rpc Sum (SumRequest) returns (SumResponse) { }
	rpc ComputeAverage (stream ComputeAverageRequest) returns (ComputeAverageResponse) { }
	rpc FindMax(stream FindMaxRequest) returns (stream FindMaxResponse) { }
}