syntax = "proto3";

package Greet;

message Greeting {
	string first_name = 1;
	string last_name = 2;
}

message GreetingRequest {
	Greeting greeting = 1;
}

message GreetingResponse {
	string result = 1;
}

message GreetManyTimesRequest {
	Greeting greeting = 1;
	int32 times = 2;
}

message GreetManyTimesResponse {
	string result = 1;
}

service GreetingService {
	rpc Greet(GreetingRequest) returns (GreetingResponse) { }
	rpc GreetManyTimes(GreetManyTimesRequest) returns (stream GreetManyTimesResponse) { }
}